[Improvement][Ulises] Add code base

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+ - themes.xml - app
+ - Created by Ulises Gonzalez
+ - Copyright (c) 2025. All rights reserved
+-->
 <resources>
 
     <style name="Theme.MiVentaCompose" parent="android:Theme.Material.Light.NoActionBar" />
+
 </resources>
