--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,16 +3,18 @@
  - Created by Ulises Gonzalez
  - Copyright (c) 2025. All rights reserved
 -->
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Application theme -->
-    <style name="Theme.MiVentaCompose" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MiVentaCompose" parent="Theme.Material3.Light.NoActionBar" />
 
     <!-- Splash theme -->
     <style name="Theme.MiVentaCompose.Splash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">#FAFFFB</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
         <item name="postSplashScreenTheme">@style/Theme.MiVentaCompose</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightNavigationBar" tools:ignore="NewApi">true</item>
     </style>
 
 </resources>
